--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,28 @@
 spring.mail.host=smtp.dbccompany.com.br
 spring.mail.port=587
-spring.mail.username=SeuEmail
-spring.mail.password=SuaSenha
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.main.allow-circular-references=true
 
 springdoc.swagger-ui.operationsSorter=method
 
 #spring.datasource.url=jdbc:postgresql://HOST:PORTA/DATABASE
 #spring.datasource.username=USER
 #spring.datasource.password=PASS
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL82Dialect
-spring.jpa.properties.hibernate.default_schema=VEM_SER
-spring.datasource.hikari.connection-init-sql=set schema 'vem_ser'
-spring.datasource.hikari.maximum-pool-size=1
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL82Dialect
+#spring.jpa.properties.hibernate.default_schema=VEM_SER
+#spring.datasource.hikari.connection-init-sql=set schema 'vem_ser'
+#spring.datasource.hikari.maximum-pool-size=1
 
-spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-
+spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 spring.jpa.show-sql=true
 log4j.logger.org.hibernate.type=trace
 spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.hikari.connection-init-sql=ALTER SESSION SET CURRENT_SCHEMA=ALYSON_SIQUEIRA
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.jpa.properties.hibernate.default_schema=ALYSON_SIQUEIRA
 
 jwt.secret=admin123
 jwt.expiration=86400000
